--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,30 @@
 @import "variables";
 @import "mixins";
-
 @import "normalize";
 @import "layout";
+@import "glyphter";
 
-// Components
-//@import "components/form_field";
+/* Components */
+@import "components/icons";
+//@import "components/links";
+@import "components/title-page";
+@import "components/item-menu";
+@import "components/text";
+@import "components/buttons";
+//@import "components/table";
+@import "components/icon-button";
 
-// Sections
-//@import "section/registration_form";
+/* Sections */
+@import "sections/chart_wrapper";
+@import "sections/date-wrapper";
+@import "sections/sidebar";
+@import "sections/topbar";
+@import "sections/table-wrapper-in-general";
+@import "sections/table-links";
+@import "sections/button-addnew";
 
-// Pages / Views
-//@import "pages/registration";
+/* Pages / Views */
+//@import "pages/general";
+//@import "pages/links";
+
+@import "media";
