--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* Colors */
+/* Font sizes */
+/* Fonts */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -13,36 +16,36 @@ html {
 }
 
 /* Sections
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * Remove the margin in all browsers.
-   */
+ * Remove the margin in all browsers.
+ */
 body {
   margin: 0;
 }
 
 /**
-   * Render the `main` element consistently in IE.
-   */
+ * Render the `main` element consistently in IE.
+ */
 main {
   display: block;
 }
 
 /**
-   * Correct the font size and margin on `h1` elements within `section` and
-   * `article` contexts in Chrome, Firefox, and Safari.
-   */
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
 
 /* Grouping content
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * 1. Add the correct box sizing in Firefox.
-   * 2. Show the overflow in Edge and IE.
-   */
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
 hr {
   box-sizing: content-box;
   /* 1 */
@@ -53,29 +56,29 @@ hr {
 }
 
 /**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
 pre {
-  font-family: monospace, monospace;
+  font-family: monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
 }
 
 /* Text-level semantics
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * Remove the gray background on active links in IE 10.
-   */
+ * Remove the gray background on active links in IE 10.
+ */
 a {
   background-color: transparent;
 }
 
 /**
-   * 1. Remove the bottom border in Chrome 57-
-   * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
-   */
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
 abbr[title] {
   border-bottom: none;
   /* 1 */
@@ -86,37 +89,37 @@ abbr[title] {
 }
 
 /**
-   * Add the correct font weight in Chrome, Edge, and Safari.
-   */
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
 b,
 strong {
   font-weight: bolder;
 }
 
 /**
-   * 1. Correct the inheritance and scaling of font size in all browsers.
-   * 2. Correct the odd `em` font sizing in all browsers.
-   */
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
 code,
 kbd,
 samp {
-  font-family: monospace, monospace;
+  font-family: monospace;
   /* 1 */
   font-size: 1em;
   /* 2 */
 }
 
 /**
-   * Add the correct font size in all browsers.
-   */
+ * Add the correct font size in all browsers.
+ */
 small {
   font-size: 80%;
 }
 
 /**
-   * Prevent `sub` and `sup` elements from affecting the line height in
-   * all browsers.
-   */
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
 sub,
 sup {
   font-size: 75%;
@@ -134,20 +137,20 @@ sup {
 }
 
 /* Embedded content
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * Remove the border on images inside links in IE 10.
-   */
+ * Remove the border on images inside links in IE 10.
+ */
 img {
   border-style: none;
 }
 
 /* Forms
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * 1. Change the font styles in all browsers.
-   * 2. Remove the margin in Firefox and Safari.
-   */
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
 button,
 input,
 optgroup,
@@ -164,9 +167,9 @@ textarea {
 }
 
 /**
-   * Show the overflow in IE.
-   * 1. Show the overflow in Edge.
-   */
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
 button,
 input {
   /* 1 */
@@ -174,9 +177,9 @@ input {
 }
 
 /**
-   * Remove the inheritance of text transform in Edge, Firefox, and IE.
-   * 1. Remove the inheritance of text transform in Firefox.
-   */
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
 button,
 select {
   /* 1 */
@@ -184,8 +187,8 @@ select {
 }
 
 /**
-   * Correct the inability to style clickable types in iOS and Safari.
-   */
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
 button,
 [type="button"],
 [type="reset"],
@@ -194,8 +197,8 @@ button,
 }
 
 /**
-   * Remove the inner border and padding in Firefox.
-   */
+ * Remove the inner border and padding in Firefox.
+ */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -205,8 +208,8 @@ button::-moz-focus-inner,
 }
 
 /**
-   * Restore the focus styles unset by the previous rule.
-   */
+ * Restore the focus styles unset by the previous rule.
+ */
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
@@ -215,18 +218,18 @@ button:-moz-focusring,
 }
 
 /**
-   * Correct the padding in Firefox.
-   */
+ * Correct the padding in Firefox.
+ */
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
 
 /**
-   * 1. Correct the text wrapping in Edge and IE.
-   * 2. Correct the color inheritance from `fieldset` elements in IE.
-   * 3. Remove the padding so developers are not caught out when they zero out
-   *    `fieldset` elements in all browsers.
-   */
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
 legend {
   box-sizing: border-box;
   /* 1 */
@@ -243,23 +246,23 @@ legend {
 }
 
 /**
-   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
-   */
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
 progress {
   vertical-align: baseline;
 }
 
 /**
-   * Remove the default vertical scrollbar in IE 10+.
-   */
+ * Remove the default vertical scrollbar in IE 10+.
+ */
 textarea {
   overflow: auto;
 }
 
 /**
-   * 1. Add the correct box sizing in IE 10.
-   * 2. Remove the padding in IE 10.
-   */
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
 [type="checkbox"],
 [type="radio"] {
   box-sizing: border-box;
@@ -269,17 +272,17 @@ textarea {
 }
 
 /**
-   * Correct the cursor style of increment and decrement buttons in Chrome.
-   */
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
 /**
-   * 1. Correct the odd appearance in Chrome and Safari.
-   * 2. Correct the outline style in Safari.
-   */
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
 [type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -288,16 +291,16 @@ textarea {
 }
 
 /**
-   * Remove the inner padding in Chrome and Safari on macOS.
-   */
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
 /**
-   * 1. Correct the inability to style clickable types in iOS and Safari.
-   * 2. Change font properties to `inherit` in Safari.
-   */
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
@@ -306,34 +309,685 @@ textarea {
 }
 
 /* Interactive
-     ========================================================================== */
+   ========================================================================== */
 /*
-   * Add the correct display in Edge, IE 10+, and Firefox.
-   */
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
 details {
   display: block;
 }
 
 /*
-   * Add the correct display in all browsers.
-   */
+ * Add the correct display in all browsers.
+ */
 summary {
   display: list-item;
 }
 
 /* Misc
-     ========================================================================== */
+   ========================================================================== */
 /**
-   * Add the correct display in IE 10+.
-   */
+ * Add the correct display in IE 10+.
+ */
 template {
   display: none;
 }
 
 /**
-   * Add the correct display in IE 10.
-   */
+ * Add the correct display in IE 10.
+ */
 [hidden] {
   display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.container-big {
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin: 0;
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+
+.main-container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  width: 100%;
+  background: #e3e3e3;
+  padding-left: 400px;
+}
+
+.topbar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-pack: end;
+      justify-content: flex-end;
+  background: #fff;
+  width: 100%;
+  position: fixed;
+  padding-right: 400px;
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.pages {
+  background: #fff;
+  margin: 15px;
+}
+
+.general {
+  margin-top: 79px;
+}
+
+@font-face {
+  font-family: 'Glyphter';
+  src: url("../vendor/fonts/Glyphter.eot");
+  /*stylelint-disable*/
+  src: url("../vendor/fonts/Glyphter.eot?#iefix") format("embedded-opentype"), url("../vendor/fonts/Glyphter.woff") format("woff"), url("../vendor/fonts/Glyphter.ttf") format("truetype"), url("../vendor/fonts/Glyphter.svg#Glyphter") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class*='icon-']::before {
+  display: inline-block;
+  font-family: 'Glyphter';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-down::before {
+  content: '\0041';
+}
+
+.icon-arrow-down-small::before {
+  content: '\0042';
+}
+
+.icon-arrow-left::before {
+  content: '\0043';
+}
+
+.icon-arrow-right::before {
+  content: '\0044';
+}
+
+.icon-arrow-up::before {
+  content: '\0045';
+}
+
+.icon-arrow-up-small::before {
+  content: '\0046';
+}
+
+.icon-banners::before {
+  content: '\0047';
+}
+
+.icon-calendar::before {
+  content: '\0048';
+}
+
+.icon-close::before {
+  content: '\0049';
+}
+
+.icon-details::before {
+  content: '\004a';
+}
+
+.icon-general::before {
+  content: '\004b';
+}
+
+.icon-links::before {
+  content: '\004c';
+}
+
+.icon-login::before {
+  content: '\004d';
+}
+
+.icon-message::before {
+  content: '\004e';
+}
+
+.icon-negative::before {
+  content: '\004f';
+}
+
+.icon-notification::before {
+  content: '\0050';
+}
+
+.icon-password::before {
+  content: '\0051';
+}
+
+.icon-payout::before {
+  content: '\0052';
+}
+
+.icon-personaldata::before {
+  content: '\0053';
+}
+
+.icon-positive::before {
+  content: '\0054';
+}
+
+.icon-postback::before {
+  content: '\0055';
+}
+
+.icon-profile::before {
+  content: '\0056';
+}
+
+.icon-quit::before {
+  content: '\0057';
+}
+
+.icon-refresh::before {
+  content: '\0058';
+}
+
+.icon-show::before {
+  content: '\0059';
+}
+
+.icon-trash::before {
+  content: '\005a';
+}
+
+.icon-url::before {
+  content: '\0061';
+}
+
+.icon-wallet::before {
+  content: '\0062';
+}
+
+/* Components */
+.icons {
+  color: #a1a1a1;
+  padding: 15px;
+}
+
+.title-page {
+  text-transform: uppercase;
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.title {
+  color: #a1a1a1;
+  padding: 0 20px;
+  font-size: 20px;
+  font-weight: 300;
+  font-family: "Lato", sans-serif;
+}
+
+.menu {
+  width: 100%;
+}
+
+.item-menu {
+  list-style-type: none;
+  padding: 10px;
+  font-size: 18px;
+}
+
+.item-menu :hover {
+  color: #fff;
+  background: #353535;
+}
+
+.item-menu a {
+  text-decoration: none;
+  color: #a1a1a1;
+}
+
+.text {
+  color: #a1a1a1;
+  font-weight: normal;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+}
+
+.button {
+  background: #f58220;
+  border-radius: 5px;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+}
+
+.button:hover {
+  background: #ffa200;
+}
+
+.icon-button {
+  color: #fff;
+}
+
+[class*='icon-']::before {
+  font-weight: bold;
+}
+
+/* Sections */
+.earningschart-wrapper {
+  padding-bottom: 70px;
+}
+
+.title-chart {
+  font-family: "Lato", sans-serif;
+  padding: 40px 250px;
+}
+
+.chart {
+  text-align: center;
+}
+
+.chart img {
+  max-height: 500px;
+}
+
+.date-wrapper {
+  text-align: center;
+  border-bottom: solid 1px #e3e3e3;
+  padding: 25px;
+}
+
+.date-wrapper .input-wrapper {
+  border: solid 1px #e3e3e3;
+  padding: 10px;
+}
+
+.button-refresh {
+  padding: 12px 15px;
+  margin: 5px;
+}
+
+.sidebar {
+  background: #1b1818;
+  width: 400px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+}
+
+.title {
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+}
+
+.title-text {
+  color: #fff;
+  font-family: "Satisfy", cursive;
+  font-size: 45px;
+  padding: 0 10%;
+  width: 100%;
+}
+
+.fa-bars {
+  font-size: 40px;
+  color: #a1a1a1;
+  padding-top: 40px;
+  padding-right: 40px;
+  display: none;
+}
+
+.icon-sidebar {
+  padding: 20px;
+}
+
+.menu-list {
+  padding: 0;
+}
+
+.item-menu {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  padding: 15px;
+}
+
+.item-menu:hover {
+  background: #353535;
+  border-left: solid 5px #f58220;
+}
+
+.item-menu:hover .link-sidebar {
+  color: #fff;
+}
+
+.menu::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #e3e3e3;
+}
+
+.manager-title {
+  padding: 0 30px;
+}
+
+.manager {
+  color: turquoise;
+  padding: 0 30px;
+  -ms-flex-align: center;
+      align-items: center;
+  max-height: 50px;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.manager img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.manager span {
+  padding-left: 20px;
+}
+
+.manager .green-dot {
+  content: "";
+  background: #71ff71;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  left: 67px;
+  top: 563px;
+}
+
+.topbar {
+  font-size: 18px;
+}
+
+.topnav-element-before {
+  position: relative;
+  padding: 20px;
+  color: #a1a1a1;
+  border-left: solid 1px #e3e3e3;
+}
+
+.topnav-element-before:hover {
+  background: #e3e3e3;
+}
+
+.notification-text,
+.logout-text {
+  display: none;
+}
+
+.icon-notification::after {
+  position: absolute;
+  content: "";
+  display: block;
+  height: 8px;
+  width: 8px;
+  background-color: #f58220;
+  top: 17px;
+  right: 35px;
+  border-radius: 50%;
+}
+
+.profile-wrapper span {
+  color: #06415c;
+  font-family: "Lato", sans-serif;
+}
+
+.table-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-pack: center;
+      justify-content: center;
+  margin: 15px auto;
+}
+
+.table-general {
+  padding: 10px 20px;
+  border-spacing: 0;
+  width: 30%;
+}
+
+.table-data {
+  border-bottom: solid 1px #e3e3e3;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  font-weight: normal;
+  font-size: 18px;
+}
+
+.number {
+  text-align: right;
+}
+
+.table-links {
+  border-spacing: 0;
+  width: 60%;
+}
+
+.link {
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.link a {
+  text-decoration: none;
+  color: #3535a0;
+  font-size: 20px;
+}
+
+.icon {
+  text-align: right;
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.icon .icon-links,
+.icon .icon-trash {
+  opacity: 0;
+}
+
+.table-data-links {
+  padding: 15px;
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.table-links-row {
+  border-bottom: solid 1px #e3e3e3;
+}
+
+.table-links-row:hover {
+  background: #e3e3e3;
+}
+
+.table-links-row:hover .icon-links,
+.table-links-row:hover .icon-trash {
+  opacity: 1;
+}
+
+.table-links-row:hover .icon-links:hover,
+.table-links-row:hover .icon-trash:hover {
+  color: #f58220;
+}
+
+.button-wrapper {
+  text-align: center;
+  margin: 20px auto;
+}
+
+.button-addnew {
+  padding: 10px 25px;
+  font-size: 20px;
+}
+
+/* Pages / Views */
+@media (max-width: 768px) {
+  .sidebar {
+    max-width: 0;
+  }
+  .title-page {
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .title {
+    -ms-flex-pack: center;
+        justify-content: center;
+  }
+  .title-text {
+    display: none;
+  }
+  .hamburger-btn {
+    font-size: 20px;
+    padding: 10px 10px;
+    display: -ms-flexbox;
+    display: flex;
+    background: #1b1818;
+    border-radius: 5px;
+    position: fixed;
+  }
+  .menu {
+    display: none;
+  }
+  .chat {
+    display: none;
+  }
+  .topbar {
+    display: none;
+  }
+  .topbar-in-media {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    max-width: 200px;
+    background: #1b1818;
+    left: 0;
+    bottom: 0;
+    padding: 0;
+    font-size: 15px;
+    font-family: "Lato", sans-serif;
+  }
+  .topbar-in-media .topnav-element-before {
+    padding: 5px 15px;
+    border: none;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    width: 200px;
+  }
+  .topbar-in-media .topnav-element-before .topnav-text {
+    padding: 10px 0;
+  }
+  .topbar-in-media .topnav-element-before .notification-text,
+  .topbar-in-media .topnav-element-before .logout-text {
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .topbar-in-media .topnav-element-before .icon-notification::after {
+    top: 10px;
+    right: 160px;
+  }
+  .topbar-in-media .topnav-element-before .icon-arrow-down {
+    display: none;
+  }
+  .topbar-in-media .topnav-element-before .icon-topnav {
+    padding: 10px;
+  }
+  .main-container {
+    padding: 0;
+  }
+  .general {
+    margin-top: 20px;
+  }
+  .chart img {
+    max-height: 120px;
+  }
+  .table-wrapper {
+    -ms-flex-direction: column;
+        flex-direction: column;
+    margin: 15px 0;
+  }
+  .table-links {
+    width: 100%;
+  }
+  .table-general {
+    width: 100%;
+    padding: 0 20px;
+  }
+  .title-chart {
+    padding: 20px;
+  }
+  .link a {
+    font-size: 13px;
+  }
+  .table-data-links {
+    font-size: 13px;
+    padding: 5px 5px;
+  }
+  td.icon {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row;
+  }
+  .icons {
+    padding: 15px 0;
+  }
+  .sidebar-show {
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 180px;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    transition: 0.2s;
+  }
+  .sidebar-show .title {
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .sidebar-show .title .title-text {
+    display: inline;
+    padding: 0 0 0 9vw;
+    font-size: 23px;
+  }
+  .sidebar-show .title .hamburger-btn {
+    left: 1px;
+  }
+  .sidebar-show .menu {
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .sidebar-show .menu .item-menu {
+    width: 180px;
+    font-size: 15px;
+  }
+  .sidebar-show .menu .item-menu .icon-sidebar {
+    padding: 10px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
