--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,15 @@
-// Colors
-$paragraph-color: #000000;
-$brand-main-color: #ff0000;
+/* Colors */
+$text-color: #a1a1a1;
+$brand-main-color: #f58220;
+$link-color: #ffa200;
+$nav-main-color: rgb(27, 24, 24);
+$black-color: #000;
+$page-color: #fff;
+$background-color: #e3e3e3;
 
-// Font sizes
-$paragraph-font-size: 16px;
+/* Font sizes */
+$paragraph-font-size: 18px;
 
-// Fonts
-$brand-font: "Open Sans", Helvetica, Arial;
-$paragraph-font: "Open Sans", Helvetica, Arial;
+/* Fonts */
+$brand-font: 'Lato', sans-serif;
+$main-title-font: 'Satisfy', cursive;
