--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,7 +1,6 @@
 @media (max-width: 768px) {
   .sidebar {
     max-width: 0;
-    //display: none;
   }
 
   .title-page {
@@ -36,7 +35,7 @@
   .topbar {
     display: none;
   }
-
+/*
   .topbar-in-media {
     display: flex;
     flex-direction: column;
@@ -78,6 +77,7 @@
       }
     }
   }
+  */
 
   .main-container {
     padding: 0;
@@ -138,7 +138,7 @@
 
       .title-text {
         display: inline;
-        padding: 0 0 0 9vw;
+        padding: 0 0 0 6vw;
         font-size: 23px;
       }
 
@@ -158,6 +158,63 @@
           padding: 10px;
         }
       }
+    }
+
+    .chat {
+      display: flex;
+      flex-wrap: wrap;
+
+      .manager-title {
+        font-size: 14px;
+      }
+
+      .manager {
+        //display: flex;
+        
+        img {
+        width: 40px;
+        height: 40px;
+        }
+
+        .green-dot {
+          top: 466px;
+          font-size: 15px;
+        }
+
+        span {
+          font-size: 15px;
+          padding-left: 10px;
+        }
+      }
+    }
+  }
+
+  .topbar-media-show {
+    display: flex;
+    flex-direction: column;
+    max-width: 180px;
+    left: 0;
+    bottom: 0;
+    padding-top: 10px;
+    font-size: 15px;
+
+    .topnav-element {
+      position: relative;
+      //padding: 20px;
+      color: $text-color;
+      border-top: solid 0.5px $background-color;
+      border-left: none;
+      padding-top: 10px;
+    
+      &:hover {
+        background: rgb(53, 53, 53);
+        border-left: solid 5px $brand-main-color;
+      }
+    }
+
+    .orange-dot {
+      right: 138px;
+      top: 7px;
     }
   }
 }
