add minor fixes

--- a/sass/sections/_sidebar.scss
+++ b/sass/sections/_sidebar.scss
@@ -65,11 +65,16 @@
 }
 
 .manager {
-  color: turquoise;
+  color: #536bf3;
   padding: 0 30px;
   align-items: center;
   max-height: 50px;
   display: flex;
+
+  &:hover {
+    background: rgb(53, 53, 53);
+    border-left: solid 5px $brand-main-color;
+  }
 
   img {
     width: 50px;
@@ -83,13 +88,13 @@
   }
 
   .green-dot {
-    content: "";
-    background: rgb(113, 255, 113);
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
+    color: #5cbd1b;
     position: absolute;
-    left: 67px;
+    left: 48px;
     top: 563px;
   }
+}
+
+.topbar-media {
+  display: none;
 }
