add minor changes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@
 @import "sections/date-wrapper";
 @import "sections/sidebar";
 @import "sections/topbar";
-@import "sections/table-wrapper-in-general";
+@import "sections/table-wrapper";
 @import "sections/table-links";
 @import "sections/button-addnew";
 
