--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,6 +1,7 @@
 @media (max-width: 768px) {
   .sidebar {
-    max-width: 0;
+    min-width: 1px;
+    height: 0;
   }
 
   .title-page {
@@ -85,15 +86,43 @@
 
   .general {
     margin-top: 20px;
+    margin-left: 20px;
   }
 
-  .chart img {
-    max-height: 120px;
+  .date-wrapper {
+  font-size: 18px;
+
+    .input-wrapper {
+      width: 200px;
+      height: 45px;
+    }
+  }
+
+  .button-refresh {
+    width: 48px;
+    height: 48px;
+    text-align: center;
+
+    i {
+      font-size: 22px;
+    }
+  }
+
+  .chart {
+    top: 40px
+  }
+
+  .pages.links {
+    margin-left: 20px;
+  }
+  
+  .button-addnew {
+    font-size: 20px;
   }
 
   .table-wrapper {
     flex-direction: column;
-    margin: 15px 0;
+    margin: 10px;
   }
 
   .table-links {
@@ -131,7 +160,10 @@
     display: flex;
     max-width: 180px;
     flex-direction: column;
-    transition: 0.2s;
+    transition: 0.5s;
+    overflow: scroll;
+    z-index: 1;
+    height: 100%;
 
     .title {
       display: flex;
@@ -163,6 +195,7 @@
     .chat {
       display: flex;
       flex-wrap: wrap;
+      border-top: solid 1px $background-color;
 
       .manager-title {
         font-size: 14px;
@@ -170,15 +203,17 @@
 
       .manager {
         //display: flex;
-        
+          
         img {
         width: 40px;
         height: 40px;
+        margin-left: 2px;
         }
 
         .green-dot {
-          top: 466px;
-          font-size: 15px;
+          top: 558px;
+          left: 53px;
+          font-size: 16px;
         }
 
         span {
@@ -195,12 +230,11 @@
     max-width: 180px;
     left: 0;
     bottom: 0;
-    padding-top: 10px;
+    padding-top: 100px;
     font-size: 15px;
 
     .topnav-element {
       position: relative;
-      //padding: 20px;
       color: $text-color;
       border-top: solid 0.5px $background-color;
       border-left: none;
@@ -212,9 +246,53 @@
       }
     }
 
-    .orange-dot {
-      right: 138px;
-      top: 7px;
+    .money-wrapper {
+      padding-left: 20px;
+      font-size: 18px;
+      padding-bottom: 5px;
+    
+      .topnav-text {
+        font-size: 18px;
+      }
     }
+    
+    .notification-wrapper {
+      padding-left: 20px;
+      padding-bottom: 5px;
+    
+      .icons {
+        font-size: 18px;
+      }
+    
+      .orange-dot {
+        top: 6px;
+        right: 140px;
+        font-size: 12px;
+      }
+    }
+    
+    .profile-wrapper {
+      font-size: 18px;
+      padding-left: 20px;
+      padding-bottom: 6px;
+    
+      span {
+        font-size: 16px;
+        font-family: $brand-font;
+      }
+    }
+    
+    .quit-wrapper {
+      padding-left: 20px;
+      font-size: 18px;
+      padding-bottom: 5px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  
+  .chart {
+    width: 100%;
   }
 }
