--- a/sass/sections/_table-links.scss
+++ b/sass/sections/_table-links.scss
@@ -1,6 +1,7 @@
 .table-links {
   border-spacing: 0;
   width: 60%;
+  margin-top: 30px;
 }
 
 .link {
@@ -10,6 +11,7 @@
     text-decoration: none;
     color: rgb(53, 53, 160);
     font-size: 20px;
+    font-family: $brand-font;
   }
 }
 
@@ -26,6 +28,8 @@
 .table-data-links {
   padding: 15px;
   border-bottom: solid 1px $background-color;
+  font-size: 25px;
+  margin: 30px;
 }
 
 .table-links-row {
@@ -44,3 +48,9 @@
     }
   }
 }
+
+.link a {
+  font-size: 25px;
+
+}
+
