--- a/sass/sections/_table-wrapper.scss
+++ b/sass/sections/_table-wrapper.scss
@@ -6,9 +6,13 @@
 }
 
 .table-general {
-  padding: 10px 20px;
+  padding: 20px 20px 20px;
   border-spacing: 0;
-  width: 30%;
+  width: 33%;
+}
+
+.table-row {
+  //padding-bottom: 30px;
 }
 
 .table-data {
@@ -16,7 +20,7 @@
   padding-top: 20px;
   padding-bottom: 5px;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .number {
