--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,6 @@
 @import "normalize";
 @import "layout";
 @import "glyphter";
-@import "media";
 
 /* Components */
 @import "components/icons";
@@ -22,4 +21,5 @@
 @import "sections/table-links";
 @import "sections/button-addnew";
 
-
+@import "media";
+@import "modal";
