add minor fixes

--- a/sass/sections/_date-wrapper.scss
+++ b/sass/sections/_date-wrapper.scss
@@ -17,9 +17,10 @@
   padding: 12px 15px;
   margin: 6px;
   width: 60px;
-  height: 60px;
+  height: 57px;
   border: none;
   margin-right: -10px;
+  cursor: pointer;
 
   i {
     font-size: 25px;
