--- a/css/style.css
+++ b/css/style.css
@@ -638,9 +638,10 @@ body {
   padding: 12px 15px;
   margin: 6px;
   width: 60px;
-  height: 60px;
+  height: 57px;
   border: none;
   margin-right: -10px;
+  cursor: pointer;
 }
 
 .button-refresh i {
@@ -704,6 +705,13 @@ body {
   color: #fff;
 }
 
+.item-menu a.link-sidebar {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 .menu::after {
   content: "";
   display: block;
@@ -726,6 +734,7 @@ body {
   max-height: 50px;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
 }
 
 .manager:hover {
@@ -790,7 +799,7 @@ body {
 .money-wrapper {
   padding-right: 43px;
   padding-left: 43px;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .money-wrapper a {
@@ -803,7 +812,7 @@ body {
 }
 
 .money-wrapper .topnav-text {
-  font-size: 30px;
+  font-size: 25px;
   padding-top: 1px;
 }
 
