--- a/sass/components/_item-menu.scss
+++ b/sass/components/_item-menu.scss
@@ -4,8 +4,9 @@
 
 .item-menu {
   list-style-type: none;
-  padding: 10px;
+  //padding: 10px;
   font-size: $paragraph-font-size;
+  margin-bottom: 40px;
 
   :hover {
     color: $page-color;
